--- a/app/src/main/res/layout/activity_power_off.xml
+++ b/app/src/main/res/layout/activity_power_off.xml
@@ -6,10 +6,26 @@
     android:layout_height="match_parent"
     tools:context="com.example.rodhuega.wacl.powerOffActivity">
 
-    <Button
-        android:id="@+id/turnOffButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="turnOffButtonOnClick"
-        android:text="@string/turnOff_text" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/turnOffButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="turnOffButtonOnClick"
+            android:text="@string/turnOff_text" />
+
+        <Button
+            android:id="@+id/postponeButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="postponeButtonOnClick"
+            android:text="@string/postpone_text" />
+    </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
