--- a/app/src/main/res/layout/activity_add_alarm.xml
+++ b/app/src/main/res/layout/activity_add_alarm.xml
@@ -323,6 +323,27 @@
                 android:layout_height="wrap_content"
                 android:onClick="addRingtoneOnClick"
                 android:text="@string/addRingtone_text" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/locationTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/noSelectedPlace_text" />
+
+                <Button
+                    android:id="@+id/setLocationButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:onClick="setLocationButtonOnClick"
+                    android:text="@string/setALocation_text" />
+            </LinearLayout>
         </LinearLayout>
 
     </ScrollView>
