--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -16,6 +16,12 @@
             android:orientation="vertical"
             android:padding="10dp">
 
+            <TextView
+                android:id="@+id/textView10"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/defaultConfiguration_text" />
+
             <LinearLayout
                 android:id="@+id/buttonsLayout"
                 android:layout_width="match_parent"
@@ -122,6 +128,27 @@
                 android:layout_weight="1"
                 android:onClick="addRingtoneOnClick"
                 android:text="@string/addRingtone_text" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/locationTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/noSelectedPlace_text" />
+
+                <Button
+                    android:id="@+id/setLocationButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:onClick="setLocationButtonOnClick"
+                    android:text="@string/setADefaultLocation_text" />
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 </android.support.constraint.ConstraintLayout>
